vercre-verifier/src/snapshots/vercre_verifier__create_request__tests__cd-state.snap
---
source: vercre-verifier/src/create_request.rs
assertion_line: 289
expression: state
---
expires_at: "[expires_at]"
request_object:
  response_type: vp_token
  client_id: "http://vercre.io/post"
  response_mode: direct_post
  response_uri: "http://vercre.io/post"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
