vercre-verifier/src/snapshots/vercre_verifier__create_request__tests__sd-response.snap
---
source: vercre-verifier/src/create_request.rs
assertion_line: 244
expression: response
---
request_object:
  response_type: vp_token
  client_id: "http://vercre.io/callback"
  nonce: "[nonce]"
  state: "[state]"
  presentation_definition: "[presentation_definition]"
  client_id_scheme: redirect_uri
  client_metadata: "[client_metadata]"
